tests/should_fail/match_float_pattern_on_int.nv
module test
// match: Float literal pattern on Int type
fn bad(n: Int) -> String {
    return match n {
        1.0 => "yes",
        _   => "no"
    }
}
